--- a/src/styles/OnBoarding.css
+++ b/src/styles/OnBoarding.css
@@ -64,6 +64,8 @@
   padding: 0.75rem;
   background-color: #ff8c38;
   color: #fff;
+  font-weight: 700;
+  font-size: 1rem;
   border: none;
   border-radius: 10px;
 }
@@ -74,6 +76,8 @@
   background-color: #fff8ed;
   color: #ff8c38;
   text-decoration: underline;
+  font-weight: 700;
+  font-size: 1rem;
   cursor: pointer;
   border: none;
 }
