fetching data from server

--- a/src/styles/BigButton.css
+++ b/src/styles/BigButton.css
@@ -11,6 +11,7 @@ button.big-button {
   border: none;
   border-radius: 1rem;
   width: 100%;
+  cursor: pointer;
 }
 .icon-wrapper {
   background-color: #ffead0;
