--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -7,9 +7,9 @@
 input,
 textarea {
   display: block;
-  width: 100%;
+  /* width: 100%; */
   padding: 0.75rem;
   border-radius: 10px;
-  border: 1px solid #51456b;
-  font-size: 1re;
+  border: 1px solid #000;
+  font-size: 1rem;
 }
