--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -7,7 +7,7 @@
 input,
 textarea {
   display: block;
-  /* width: 100%; */
+  width: 100%;
   padding: 0.75rem;
   border-radius: 10px;
   border: 1px solid #000;
