--- a/src/styles/ItemWrapper.css
+++ b/src/styles/ItemWrapper.css
@@ -6,11 +6,15 @@
   align-items: center;
   width: 100%;
 }
+
 .items-wrapper .items-detail-wrapper {
   background-color: #ffead0;
   padding: 1rem;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 .items-wrapper .items-amount-wrapper {
   background-color: #ffead0;
@@ -20,6 +24,9 @@
   align-items: center;
   justify-content: center;
 }
-.items-wrapper .items-detail-wrapper > small {
+.items-wrapper .items-detail-wrapper small {
   color: #a8a8a8;
+}
+.items-wrapper .items-detail-wrapper input[type="checkbox" i]:checked {
+  accent-color: #ff8c38;
 }
