--- a/src/styles/OnBoarding.css
+++ b/src/styles/OnBoarding.css
@@ -84,3 +84,29 @@
 .onboarding-main-section .buttons .signin-button:hover {
   text-decoration: none;
 }
+
+@media (min-width: 800px) {
+  .on-boarding {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .code-input-form {
+    max-width: 600px;
+    min-width: 600px;
+    margin: 0 auto;
+    justify-self: center;
+  }
+
+  .onboarding-main-section {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    gap: 2rem;
+    max-width: 600px;
+  }
+}
