--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   gap: 1.5rem;
   /* width: 100%; */
-  height: 100vh;
+  height: 80vh;
   align-items: center;
   justify-content: center;
 }
@@ -12,12 +12,17 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 30%;
+  width: 100%;
+  max-width: 600px;
+}
+.login-form input {
+  max-width: 600px !important;
 }
 .btn {
   padding: 0.75rem;
   border-radius: 0.75rem;
-  width: 30%;
+  width: 100%;
+  max-width: 600px;
   font-size: 1rem;
   cursor: pointer;
 }
@@ -33,8 +38,13 @@
 }
 .btn.btn-signin {
   width: 100%;
-  background-color: #51456b;
+  background-color: #ff8c38;
+  margin-top: 1rem;
+  border: none;
   color: #fff;
+}
+.btn.btn-signin:hover {
+  background-color: #000;
 }
 .btn-have-account {
   background: none;
