--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,28 @@ body {
   background-color: #fff8ed;
   font-family: "Noto Sans", sans-serif;
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #ff8c38;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+.loader-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
