--- a/src/styles/OnBoarding.css
+++ b/src/styles/OnBoarding.css
@@ -90,6 +90,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 1.5rem;
   }
 
   .code-input-form {
@@ -108,5 +109,6 @@
     align-self: center;
     gap: 2rem;
     max-width: 600px;
+    margin-top: 1rem;
   }
 }
